--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,23 @@
 #spring.jackson.serialization.fail-on-empty-beans=false
 ########## Database :: postgresql
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.url=jdbc:postgresql://172.17.155.17:5432/postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=Anandi24$
-###PCF
+###PCF  postgreSQL
 spring.datasource.url={elephantsql.credentials.url}
-#
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+##PCF mySQL
+#spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-04.cleardb.net/ad_a4147416d6a5b23?user=bd0af75c0d4fef&password=d0d65323
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.url={cleardb.credentials.uri}
+##
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
