--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,8 @@ applications:
     path: target\employee-service-1.0.0-SNAPSHOT.jar
     random-route: true
     services:
+      - config-server
+      - eureka-server
       - postgreSQL
     buildpacks:
       - https://github.com/cloudfoundry/java-buildpack.git
