--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,11 @@
     <version>0.7.5</version>
 </dependency>
 
-<!-- 
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency> -->
+		</dependency>
 		
 	</dependencies>
 	<dependencyManagement>
