--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,6 @@ logging.file.name=c:/corebase/Demo/logs/employeeService.log
 management.endpoints.web.exposure.include=*
 #Eureka Server, while creating docker image turned off
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+eureka.client.serviceUrl.defaultZone=${vcap.services.eureka-server.credentials.uri}
 
 
