--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-cloud-services.version>2.2.1.RELEASE</spring-cloud-services.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
@@ -71,7 +72,21 @@
 			<scope>test</scope>
 		</dependency>
 		
-		
+		<dependency>
+			<groupId>io.pivotal.spring.cloud</groupId>
+			<artifactId>spring-cloud-services-starter-service-registry</artifactId>
+			<exclusions>
+              <exclusion>
+                <groupId>io.pivotal.spring.cloud</groupId>
+                <artifactId>cloudfoundry-certificate-truster</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.springframework.security.oauth</groupId>
+                <artifactId>spring-security-oauth2</artifactId>
+              </exclusion>
+              
+            </exclusions>
+		</dependency>
 		
 		<!-- <dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -97,6 +112,8 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		
+	
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -104,6 +121,14 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			
+			<dependency>
+				<groupId>io.pivotal.spring.cloud</groupId>
+				<artifactId>spring-cloud-services-dependencies</artifactId>
+				<version>${spring-cloud-services.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
